--- a/oceanstyles.css
+++ b/oceanstyles.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.cdnfonts.com/css/poppins?styles=20390');
 
+header {
+    background-color: aliceblue;
+    border-radius: 10px;
+    height: 12vh;
+    float: center;
+    width: 98vw;
+}
+
 body {
     background-color: rgb(32, 32, 187);
 }
