--- a/oceanstyles.css
+++ b/oceanstyles.css
@@ -4,7 +4,7 @@ header {
     background-color: aliceblue;
     border-radius: 10px;
     height: 12vh;
-    float: center;
+    float: top;
     width: 98vw;
 }
 
