--- a/oceanstyles.css
+++ b/oceanstyles.css
@@ -8,7 +8,14 @@
     width: 98vw;
     margin: 1vh
 }
-
+p {
+    font-family: 'Poppins', sans-serif;
+    margin: 1vw;
+}
+h1 {
+    font-family: 'Poppins', sans-serif;
+    margin: 1vw;
+}
 body {
-    background-color: rgb(32, 32, 187);
+    background-color: rgb(57, 57, 238);
 }
