--- a/oceanstyles.css
+++ b/oceanstyles.css
@@ -6,7 +6,7 @@
     height: 12vh;
     float: top;
     width: 98vw;
-    margin: 1vh
+    margin: 2vh;
 }
 p {
     font-family: 'Poppins', sans-serif;
