--- a/oceanstyles.css
+++ b/oceanstyles.css
@@ -1,12 +1,35 @@
 @import url('https://fonts.cdnfonts.com/css/poppins?styles=20390');
 
+@keyframes extend {
+    0% {height: 15vh}
+    100% {height: 60vh}
+}
+#sidebar {
+    height: 15vh;
+    width: 20vw;
+    background-color: aliceblue;
+    border-radius: 10px;
+    text-align: center;
+    float: right;
+    margin: 2vh;
+    margin-top: 1vh;
+    line-height: 11vh;
+    transition: all 1s;
+}
+#sidebar:hover {
+    animation-name: extend;
+    animation-duration: 1s;
+    height: 60vh
+}
 #header {
     background-color: aliceblue;
     border-radius: 10px;
-    height: 12vh;
+    height: 15vh;
     float: top;
     width: 98vw;
     margin: 2vh;
+    line-height: 15vh;
+    text-align: center;
 }
 p {
     font-family: 'Poppins', sans-serif;
@@ -15,6 +38,7 @@ p {
 h1 {
     font-family: 'Poppins', sans-serif;
     margin: 1vw;
+    float: center
 }
 body {
     background-color: rgb(57, 57, 238);
