--- a/oceanstyles.css
+++ b/oceanstyles.css
@@ -2,7 +2,31 @@
 
 @keyframes extend {
     0% {height: 15vh}
-    100% {height: 60vh}
+    100% {height: 55.5vh}
+}
+@keyframes enlarge {
+    0% {height: 7vh; width: 15vw; background-color: rgb(185, 41, 252); line-height: 7vh;}
+    100% {height: 9vh; width: 18vw; background-color: rgb(113, 6, 162); line-height: 9vh;}
+}
+@keyframes shake {
+    0% {transform: rotate(5deg);}
+    50% {transform: rotate(-5deg);}
+    100% {transform: rotate(5deg);}
+}
+@keyframes rotate {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(180deg);}
+}
+.material-symbols-outlined {
+    float:left;
+    margin-top: 5.75vh;
+    margin-left: 1.5vw;
+    transition: all 1s;
+    font-variation-settings:
+    'FILL' 500,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
 }
 #sidebar {
     height: 15vh;
@@ -15,11 +39,46 @@
     margin-top: 1vh;
     line-height: 11vh;
     transition: all 1s;
+    overflow-y: hidden;
 }
 #sidebar:hover {
     animation-name: extend;
     animation-duration: 1s;
-    height: 60vh
+    animation-iteration-count: 1;
+    height: 55.5vh; 
+}
+#sidebar:hover > .material-symbols-outlined { 
+    animation-name: rotate;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    transform: rotate(180deg);
+}
+#sidebarpiece {
+    float: center;
+    height: 7vh;
+    width: 15vw;
+    background-color: rgb(185, 41, 252);
+    border-radius: 10px;
+    text-align: center;
+    margin: 2vh;
+    margin: 0 auto;
+    line-height: 7vh;
+    transition: width 1s, height 1s, transform 1s, background-color 1s, line-height 1s;
+    align-self: center;
+    margin-top: 2.5vh
+
+}
+#sidebarpiece:hover {
+    animation-name: enlarge;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    background-color: rgb(113, 6, 162);
+    animation-name: shake;
+    animation-duration: .5s;
+    animation-iteration-count: infinite;
+    height: 9vh; 
+    width: 18vw;
+    line-height: 9vh;
 }
 #header {
     background-color: aliceblue;
@@ -34,6 +93,7 @@
 p {
     font-family: 'Poppins', sans-serif;
     margin: 1vw;
+    font-weight: bold;
 }
 h1 {
     font-family: 'Poppins', sans-serif;
