--- a/oceanstyles.css
+++ b/oceanstyles.css
@@ -5,8 +5,8 @@
     100% {height: 55.5vh}
 }
 @keyframes enlarge {
-    0% {height: 7vh; width: 15vw; background-color: rgb(185, 41, 252); line-height: 7vh;}
-    100% {height: 9vh; width: 18vw; background-color: rgb(113, 6, 162); line-height: 9vh;}
+    0% {height: 7vh; width: 15vw; background-color: rgb(203, 127, 237); line-height: 7vh;}
+    100% {height: 9vh; width: 18vw; background-color: rgb(189, 75, 246); line-height: 9vh;}
 }
 @keyframes shake {
     0% {transform: rotate(5deg);}
@@ -17,16 +17,17 @@
     0% {transform: rotate(0deg);}
     100% {transform: rotate(180deg);}
 }
-.material-symbols-outlined {
-    float:left;
-    margin-top: 5.75vh;
+.material-symbols-outlined.md-36 {
+    float: left;
+    margin-top: 5.5vh;
     margin-left: 1.5vw;
     transition: all 1s;
+    font-size: 36px;
     font-variation-settings:
     'FILL' 500,
     'wght' 400,
     'GRAD' 0,
-    'opsz' 48
+    'opsz' 16
 }
 #sidebar {
     height: 15vh;
@@ -57,7 +58,7 @@
     float: center;
     height: 7vh;
     width: 15vw;
-    background-color: rgb(185, 41, 252);
+    background-color: rgb(203, 127, 237);
     border-radius: 10px;
     text-align: center;
     margin: 2vh;
@@ -72,7 +73,7 @@
     animation-name: enlarge;
     animation-duration: 1s;
     animation-iteration-count: 1;
-    background-color: rgb(113, 6, 162);
+    background-color: rgb(193, 75, 252);
     animation-name: shake;
     animation-duration: .5s;
     animation-iteration-count: infinite;
