--- a/oceanstyles.css
+++ b/oceanstyles.css
@@ -133,6 +133,10 @@ a {
     text-decoration: none;
     color: black;
 }
+img {
+    border-radius: 10px;
+    border-style: solid;
+}
 body {
     background-color: rgb(57, 57, 238);
 }
