--- a/oceanstyles.css
+++ b/oceanstyles.css
@@ -14,6 +14,8 @@
     margin-left: 1.5vw;
     transition: all 1s;
     font-size: 36px;
+    position: relative;
+    z-index: 20;
     font-variation-settings:
     'FILL' 500,
     'wght' 400,
@@ -139,7 +141,6 @@
     margin-top: 22vh;
     background-color: aliceblue;
     float: left;
-    transition: all 1s;
 }
 #backtext {
     font-size: .86vw;
@@ -149,6 +150,30 @@
 #filler {
     background-color: rgb(0,0,0,0); 
     height: 2.5vh
+}
+#hoverdiv {
+    background-color: rgb(0,0,0,0);
+    width: auto;
+}
+#hoverdiv:hover > .material-symbols-outlined.md-36{
+    margin-left: 40vw;
+    transform: rotate(360deg)
+}
+#hoverdiv:hover > #coverdiv {
+    width: 0;
+}
+#coverdiv {
+    width: 40vw;
+    float: left;
+    position: relative;
+    background-color: aliceblue;
+    height: 6vh;
+    margin-left: -1.5vw;
+}
+#backtext2 {
+    z-index: -1; 
+    position: absolute;
+    margin-left: 3vw
 }
 p {
     font-family: 'Poppins', sans-serif;
