--- a/oceanstyles.css
+++ b/oceanstyles.css
@@ -12,6 +12,16 @@
     0% {width: 100%}
     100% {width: 0}
 }
+@keyframes flowback2 {
+    0% {width: 100%}
+    80% {width: 100%}
+    100% {width: 0}
+}
+@keyframes flowback3 {
+    0% {width: 100%}
+    90% {width: 100%}
+    100% {width: 0}
+}
 .material-symbols-outlined.md-36 {
     float: left;
     margin-top: 5.5vh;
@@ -126,6 +136,13 @@
     bottom: 4vh;
     transition: all 1s
 }
+#imgmodern {
+    float: right;
+    position: absolute;
+    bottom: 4vw;
+    left: 57vw;
+    transition: all 1s
+}
 #imgclimate {
     float: left;
     height: 23vh;
@@ -192,32 +209,52 @@
     height: 23vh;
 }
 #backtext3 {
+    position: relative;
     z-index: -1;
-    position: absolute; 
+    float: right;
 }
 #modernhover {
     position: relative
 }
 #modern1 {
-    background-color: rgb(80, 144, 200);
+    background-color: aliceblue;
     position: relative;
+    float: right;
+    overflow: visible; 
+    margin-top: -10vh;
     width: 100%;
+    height: 10vh;
 }
 #modern2 {
     background-color: aliceblue;
     position: relative;
-    margin-bottom: -8vh;
-    margin-top: 6vh;
+    float: right;
+    overflow: visible; 
+    margin-top: -10vh;
+    width: 100%;
+    height: 10vh;
 }
 #modern3 {
     background-color: aliceblue;
     position: relative;
-    margin-bottom: -8vh;
-    margin-top: 14vh;
+    float: right;
+    overflow: visible; 
+    margin-top: -10vh;
+    width: 100%;
+    height: 10vh;
 }
 #modernhover:hover ~ #modern1 {
     animation-name: flowback1;
     animation-duration: 1s;
+    width: 0vw;
+}#modernhover:hover ~ #modern2 {
+    animation-name: flowback2;
+    animation-duration: 6s;
+    width: 0vw;
+}
+#modernhover:hover ~ #modern3 {
+    animation-name: flowback3;
+    animation-duration: 11s;
     width: 0vw;
 }
 p {
