--- a/oceanstyles.css
+++ b/oceanstyles.css
@@ -270,8 +270,7 @@ h1 {
 cite {
     font-family: 'Poppins', sans-serif;
     margin: 1vw;
-    float: center;
-    color:rgb(46, 218, 183)
+    float: left;
 }
 a {
     text-decoration: none;
